ci/event-listener/httproute.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: eventlistener
spec:
  hostnames:
  - platformup2date.event-listener.ci.sreyardship.com
  parentRefs:
  - group: gateway.networking.k8s.io
    kind: Gateway
    name: web
    namespace: istio-system
    sectionName: subdomain-event-listener-ci-sreyardship
  rules:
  - backendRefs:
    - group: ""
      kind: Service
      name: el-platformup2date-listener-interceptor
      port: 8080
      weight: 1
    matches:
    - path:
        type: PathPrefix
        value: /
